<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <ScrollView

        android:id="@+id/command_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToPadding="false"
        android:paddingVertical="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <!-- Profile & Name Section -->
            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewOutlinedStyle"
                android:layout_width="match_parent"
                app:cardElevation="4dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/shortcut_profiles"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <Spinner
                        android:id="@+id/shortcutProfileSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:padding="12dp"
                        tools:text="Default" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/shortcut_name_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/shortcut_profile_name_input_hint"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/shortcut_profile_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/manage_profile_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        app:icon="@drawable/settings_icon" />



                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Key Sequence Section -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/key_sequence_card"
                style="?attr/materialCardViewOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                app:cardElevation="4dp"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/seqeuenceLinearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/key_sequences"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <LinearLayout
                        android:id="@+id/addDeleteLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/addKeysequenceButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/add"
                            app:icon="@drawable/plus_icon" />

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- AI mode Section -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ai_mode_card"
                style="?attr/materialCardViewOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                app:cardElevation="4dp"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/aiLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/use_ai_mode_to_create_shortcuts"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?attr/colorPrimary" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/aiSearchInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/loading_animation"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="start|center_vertical"
                            android:layout_marginEnd="8dp"
                            android:visibility="gone"
                            app:lottie_autoPlay="true"
                            app:lottie_fileName="Loading.json"
                            app:lottie_loop="true"
                            tools:visibility="visible" />

                    </FrameLayout>

                    <Button
                        android:id="@+id/aiSearchButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ai_search" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Save Button -->
            <Button
                android:id="@+id/saveShortcutProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/save"
                app:icon="@drawable/addcommand_icon" />

            <!-- TextView jetzt innerhalb des scrollbaren Bereichs -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/ai_can_make_mistakes_so_double_check_it"
                android:textAppearance="?attr/textAppearanceCaption"/>


            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">


            <com.google.android.material.button.MaterialButton
                    android:id="@+id/import_button"
                    style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:text="@string/import_title"

                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/export_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_title"

                    />

            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
